--- a/resume3.0/myresume/index.html
+++ b/resume3.0/myresume/index.html
@@ -395,7 +395,7 @@
 
         </div>
 
-        <script src="js-counter/index.js"></script>
+        <script src="index.js"></script>
 
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery-migrate-3.0.1.min.js"></script>
