--- a/resume3.0/myresume/index.html
+++ b/resume3.0/myresume/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="css/scrollarrow.css">
         <link rel="stylesheet" href="css/flaticon.css">
         <link rel="stylesheet" href="css/icomoon.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
       </head>
       <body>
         <div class="KW_progressContainer">
