updated file path for correct display

--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="css/scrollarrow.css">
         <link rel="stylesheet" href="css/flaticon.css">
         <link rel="stylesheet" href="css/icomoon.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
       </head>
       <body>
         <div class="KW_progressContainer">
@@ -395,7 +395,7 @@
 
         </div>
 
-        <script src="index.js"></script>
+        <script src="js-counter/index.js"></script>
 
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery-migrate-3.0.1.min.js"></script>
