--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -316,7 +316,7 @@
                           <div class="row"> 
 
                             <div class="column">
-                                <a href="https://www.youracclaim.com/badges/6500c8df-89f2-454b-bfbc-09fc3fe534cd/public_url" target="_blank"><img class="mb-3" src="images/aws_ccp.png" style="width:100%"></a>
+                                <a href="https://www.credly.com/badges/e9ba9344-0339-4895-9df8-19dadc4057ce" target="_blank"><img class="mb-3" src="images/aws_ccp.png" style="width:100%"></a>
                             </div>
 
                             <div class="column">
