--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -103,18 +103,21 @@
                     <h1 class="bold-text">About</h1>
                     <div class="p-5">
                       <h2 class="mb-5">Hi! I'm Gil Hope</h2>
-                      <p>I'm an aspiring Cloud Engineer with focus on AWS Cloud. </p>
+                      <p>I'm a Cloud Engineer with a focus on AWS looking for a full time opportunity to prove myself. </p>
                       <p><!--<a href="#experience">Checkout my resume</a>--></p>
                       <ul class="ftco-footer-social list-unstyled mt-4">
                         <li><a target="_blank" href="https://www.linkedin.com/in/gil-hope/"><span class="icon-linkedin"></span></a></li>
                         <li><a target="_blank" href="https://github.com/GilHope"><span class="icon-github"></span></a></li>
-                        <!-- <li><a target="_blank" href="https://twitter.com/shekar_ym"><span class="icon-twitter"></span></a></li> -->
+                        
+                        <!-- <li><a target="_blank" href="https://twitter.com/shekar_ym"><span class="icon-twitter"></span></a></li>-->
                         <!-- <li><a href="#"><span class="icon-instagram"></span></a></li> -->
                       </ul>
                       <h5>Contact me here!</h5>
                       <p>Email: <a style="z-index: 1;position:relative;" href="mailto:ghopecs@gmail.com">ghopecs@gmail.com</a></p>
                       <p>Phone: <a style="z-index: 1;position:relative;"  href="tel:+19124142161">+1 912 414 2161</a></p>
                       <h5><a style="z-index: 1;position:relative;" href="https://dev.to/gilhope" target="_blank">Check out my blog!</a></h5>
+                      <img src="images/aws_ccp.png" style="width:25%">
+                      <img src="images/aws_saa.png" style="width:25%">
                     </div>
                   </div>
                 </div>
@@ -169,15 +172,14 @@
                       <p>2023 - present</p>
                     </div>
                   </div>
-
                   <div class="exp-wrap py-4">
                     <div class="desc">
-                      <h4 id="resume-gap">Owner / Operator <span> - Broad Spectrum Advertising LLC</span> </h4>
-                      <p class="location">Branding Director, Client Communications, Client Aquisition, Formal and Informal Business Pitching, Client Budgeting.</p>
+                      <h4 id="resume-gap">Owner / Operator <span><a target="_blank" href="http://broadspectrumad.com/"> - Broad Spectrum Advertising LLC</a></span> </h4>
+                      <p class="location">Branding Director, Client Communications, Aquisition, Formal and Informal Business Pitching, Client Budgeting.</p>
                       <p class="location"></p>
                     </div>
                     <div class="year">
-                      <p>2017 - 2021</p>
+                      <p>2017 - 2022</p>
                     </div>
                   </div>
                   
@@ -194,7 +196,7 @@
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4>Security <span> - Elan Savannah</span> </h4>
-                      <p class="location">Effective Communication, Vigilant Observation, Crowd Monitoring, Descalation Tactics, Maintaining Calm and Professional Demeanor At All Times.</p>
+                      <p class="location">Effective Communication, Vigilant Observation, Crowd Monitoring, Maintaining Calm and Professional Demeanor At All Times.</p>
                     </div>
                     <div class="year">
                       <p>2016 - 2018</p>
