--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -116,8 +116,12 @@
                       <p>Email: <a style="z-index: 1;position:relative;" href="mailto:ghopecs@gmail.com">ghopecs@gmail.com</a></p>
                       <p>Phone: <a style="z-index: 1;position:relative;"  href="tel:+19124142161">+1 912 414 2161</a></p>
                       <h5><a style="z-index: 1;position:relative;" href="https://dev.to/gilhope" target="_blank">Check out my blog!</a></h5>
-                      <img src="images/aws_ccp.png" style="width:25%">
-                      <img src="images/aws_saa.png" style="width:25%">
+                      <a href="https://www.credly.com/badges/e9ba9344-0339-4895-9df8-19dadc4057ce" target="_blank">
+                        <img src="images/aws_ccp.png" style="z-index: 1; position: relative; width:25%">
+                      </a>
+                      <a href="https://www.credly.com/badges/e108acb8-64be-4013-90b2-d055dbc69d5c" target="_blank">
+                        <img src="images/aws_saa.png" style="z-index: 1; position:relative; width:25%">
+                      </a>
                     </div>
                   </div>
                 </div>
