--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -400,7 +400,8 @@
           </div>
 
         </div>
-
+        <script src="config.js"></script>
+        #new
         <script src="js-counter/index.js"></script>
 
         <script src="js/jquery.min.js"></script>
