Update frontend CI/CD configuration

--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -400,9 +400,12 @@
           </div>
 
         </div>
-        <script src="config.js"></script>
+        <!-- <script src="config.js"></script>
         #new
-        <script src="js-counter/index.js"></script>
+        <script src="js-counter/index.js"></script> -->
+        <script src="config.js" type="module"></script>
+        <script src="js-counter/index.js" type="module"></script>
+
 
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery-migrate-3.0.1.min.js"></script>
