--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -297,7 +297,7 @@
                             </li>
                             <li>
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                Management & Governance: AWS Organizations, CloudWatch, CloudTrail, AWS Config, AWS Systems Manager.
+                                Management & Governance: AWS Organizations, CloudWatch, CloudFormation, CloudTrail, AWS Config, AWS Systems Manager.
                             </li>
                             <li>
                               <span class="fa-li"><i class="fas fa-check"></i></span>
