--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -115,7 +115,7 @@
                       <h5>Contact me here!</h5>
                       <p>Email: <a style="z-index: 1;position:relative;" href="mailto:ghopecs@gmail.com">ghopecs@gmail.com</a></p>
                       <p>Phone: <a style="z-index: 1;position:relative;"  href="tel:+19124142161">+1 912 414 2161</a></p>
-                      <h5><a style="z-index: 1;position:relative;" href="https://dev.to/gilhope" target="_blank">Check out my blog!</a></h5>
+                      <h5><a style="z-index: 1;position:relative;" href="https://dev.to/gilhope/conquering-the-cloud-my-adventure-with-the-cloud-resume-challenge-5ak6" target="_blank">Check out my blog!</a></h5>
                       <a href="https://www.credly.com/badges/e9ba9344-0339-4895-9df8-19dadc4057ce" target="_blank">
                         <img src="images/aws_ccp.png" style="z-index: 1; position: relative; width:25%">
                       </a>
