--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -170,7 +170,7 @@
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4>Internship <span> - Arcadian Cloud</span> </h4>
-                      <p class="location">Project Development, Blogging</p>
+                      <p class="location">Project Development, Pair Programming, End-To-End Testing, Agile, Blogging</p>
                     </div>
                     <div class="year">
                       <p>2023 - present</p>
