--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -103,7 +103,7 @@
                     <h1 class="bold-text">About</h1>
                     <div class="p-5">
                       <h2 class="mb-5">Hi! I'm Gil Hope</h2>
-                      <p>I'm a Cloud Engineer with a focus on AWS looking for a full time opportunity to prove myself. </p>
+                      <p>I'm a Cloud Architect with a focus on AWS. </p>
                       <p><!--<a href="#experience">Checkout my resume</a>--></p>
                       <ul class="ftco-footer-social list-unstyled mt-4">
                         <li><a target="_blank" href="https://www.linkedin.com/in/gil-hope/"><span class="icon-linkedin"></span></a></li>
@@ -131,11 +131,11 @@
                 <div class="col-md-10">
                   <div class="profile ftco-animate">
                     <h2 class="mb-4"><a target="_blank" href="https://aws.amazon.com/developer/community/community-builders/">About Me</a></h2>
-                    <p>Motivated and aspiring cloud solutions engineer with a passion for using technology to solve complex problems. 
-                      Strong work ethic, positive attitude, and eagerness to learn. No prior tech background but committed to developing new skills. 
-                      Based in Savannah, Georgia and seeking opportunities to contribute to a team's success and make a meaningful impact. Experience with remote and hybrid 
+                    <p>Highly motivated DevOps / Cloud Architect with a passion for using technology to solve complex problems. 
+                      Strong work ethic, positive attitude, and eagerness to learn. 
+                      Based in Savannah, Georgia and seeking opportunities to contribute to a team's success and make a meaningful impact. Self-starter with experience with remote and hybrid. 
                       Currently working within an internship with <a target="_blank" href="https://arcadian.cloud">Arcadian Cloud</a> by learning under 
-                      and assisting Cloud career professionals with project development and contributing content blog posts.</p>
+                      and assisting Cloud career professionals with project development.</p>
                     </div>
                 </div>
               </div>
@@ -152,7 +152,7 @@
                             <p>
                               <li>Deploy an HTML resume as AWS S3 static website. Configure AWS CloudFront and OAI to make the S3 website URL to use HTTPS.</li>
                               <li>Configure AWS Route 53 for a custom domain name and point to the CloudFront distribution.</li>
-                              <li>Developed a JavaScript snippet to call an AWS Lambda Function URL and then using Lambda as the backend, to retrieve and update the visitor count in a DynamoDB database.</li>
+                              <li>Developed a JavaScript snippet to call an AWS API Gateway and then using Lambda as the backend, to retrieve and update the visitor count in a DynamoDB database.</li>
                               <li>Infrastructure as Code - Define the API resources – DynamoDB table, API Gateway and, Lambda function in an AWS SAM template.</li>
                               <li>Setup CI/CD using GitHub actions for backend and front end.</li>
                             </p>
@@ -170,7 +170,7 @@
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4>Internship <span> - Arcadian Cloud</span> </h4>
-                      <p class="location">Project Development, Pair Programming, End-To-End Testing, Agile, Blogging</p>
+                      <p class="location">Project Development, Pair Programming, End-To-End Testing, Agile Strategies, Content Creation</p>
                     </div>
                     <div class="year">
                       <p>2023 - present</p>
@@ -304,7 +304,18 @@
                               Infrastructure-as-Code: Cloudformation & AWS SAM
                             </li>
                         </ul>
-                        
+
+                        <div class="subheading mb-3"><h4>Containerization</h4></div>
+                        <ul class="fa-ul mb-0">
+                          <li>
+                              <span class="fa-li"><i class="fas fa-check"></i></span>
+                              Docker
+                          </li>
+                          <li>
+                              <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Kubernetes
+                          </li>
+                        </ul>
                         <div class="subheading mb-3"><h4>Programming Languages & Web</h4></div>
                         <ul class="fa-ul mb-0">
                             <li>
