--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -103,7 +103,7 @@
                     <h1 class="bold-text">About</h1>
                     <div class="p-5">
                       <h2 class="mb-5">Hi! I'm Gil Hope</h2>
-                      <p>I'm a Cloud Architect with a focus on AWS. </p>
+                      <p>I'm a Cloud Engineer with a focus on AWS. </p>
                       <p><!--<a href="#experience">Checkout my resume</a>--></p>
                       <ul class="ftco-footer-social list-unstyled mt-4">
                         <li><a target="_blank" href="https://www.linkedin.com/in/gil-hope/"><span class="icon-linkedin"></span></a></li>
