--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -193,8 +193,16 @@
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4 id="resume-gap">Owner / Operator <span><a target="_blank" href="http://broadspectrumad.com/"> - Broad Spectrum Advertising LLC</a></span> </h4>
-                      <p class="location">Branding Director, Client Communications, Aquisition, Formal and Informal Business Pitching, Client Budgeting.</p>
-                      <p class="location"></p>
+                      <p class="location">
+                        <li>Managed pipeline development adhering to Agile methodologies.</li>
+                        <li>Assisted in building automated pipelines for clients using GitHub Actions, integrating security measures and utilizing Playwright for E2E and Jest for unit testing.</li>
+                        <li>Implementing AWS Cognito using Infrastructure-as-Code and integrated AWS Amplify React for site authentication for clients</li>
+                        <li>Set up Discord Notifications on success or failure of workflow and tests with Discord webhooks and GitHub Actions.</li>
+                        <li>Deployed to Vercel for development environments using GitHub Actions.</li>
+                        <li>Proficient in Git/GitHub branch management and Agile collaboration methodologies.</li>
+                        <li>Experience in diagnosing and resolving Linus system issues by utilizing filesystems and hardware diagnostics, as well as addressing boot-related problems and system recovery.</li>
+                        <li>Basic familiarity with Docker, Kubernetes, Linkerd, and Jenkins.</li>
+                      </p>
                     </div>
                     <div class="year">
                       <p>2017 - 2022</p>
