--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -376,7 +376,7 @@
                   </div>
                   <div class="ftco-footer-widget">
                     <h2 class="mb-3">Contact me</h2>
-                    <p class="h3 email"><a href="mailto:ghopecs@gmail.com">ghopecs@gmail.com</a></p>
+                    <p class="h3 email"><a href="mailto:gildhope@gmail.com">gildhope@gmail.com</a></p>
                   </div>
                 </div>
               </div>
