--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -103,7 +103,7 @@
                     <h1 class="bold-text">About</h1>
                     <div class="p-5">
                       <h2 class="mb-5">Hi! I'm Gil Hope</h2>
-                      <p>I'm a Cloud Engineer with a focus on AWS. </p>
+                      <p>I'm a DevOps / Cloud Developer with a focus on AWS. </p>
                       <p><!--<a href="#experience">Checkout my resume</a>--></p>
                       <ul class="ftco-footer-social list-unstyled mt-4">
                         <li><a target="_blank" href="https://www.linkedin.com/in/gil-hope/"><span class="icon-linkedin"></span></a></li>
@@ -136,7 +136,7 @@
                 <div class="col-md-10">
                   <div class="profile ftco-animate">
                     <h2 class="mb-4"><a target="_blank" href="https://aws.amazon.com/developer/community/community-builders/">About Me</a></h2>
-                    <p>Highly motivated DevOps / Cloud Architect with a passion for using technology to solve complex problems. 
+                    <p>Highly motivated DevOps / Cloud Developer with a passion for using technology to solve complex problems. 
                       Strong work ethic, positive attitude, and eagerness to learn. 
                       Based in Savannah, Georgia and seeking opportunities to contribute to a team's success and make a meaningful impact. Self-starter with experience with remote and hybrid. 
                       Currently working within an internship with <a target="_blank" href="https://arcadian.cloud">Arcadian Cloud</a> by learning under 
