--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -174,7 +174,7 @@
                   
                   <div class="exp-wrap py-4">
                     <div class="desc">
-                      <h4>Internship <span> - Arcadian Cloud</span> </h4>
+                      <h4>Internship <span><a href="https://arcadian.cloud/"> - Arcadian Cloud</a></span> </h4>
                       <p class="location">
                         <li>Managed pipeline development adhering to Agile methodologies.</li>
                         <li>Assisted in building automated pipelines for clients using GitHub Actions, integrating security measures and utilizing Playwright for E2E and Jest for unit testing.</li>
@@ -193,15 +193,12 @@
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4 id="resume-gap">Owner / Operator <span><a target="_blank" href="http://broadspectrumad.com/"> - Broad Spectrum Advertising LLC</a></span> </h4>
+                      <p>I founded Broad Spectrum LLC in 2017 while working on my degree with a couple of friends. We operated for approximately 5 years and during which time we worked with many local area businesses. From restaurants to healthcare, night clubs to auto parts dealers.</p>
                       <p class="location">
-                        <li>Managed pipeline development adhering to Agile methodologies.</li>
-                        <li>Assisted in building automated pipelines for clients using GitHub Actions, integrating security measures and utilizing Playwright for E2E and Jest for unit testing.</li>
-                        <li>Implementing AWS Cognito using Infrastructure-as-Code and integrated AWS Amplify React for site authentication for clients</li>
-                        <li>Set up Discord Notifications on success or failure of workflow and tests with Discord webhooks and GitHub Actions.</li>
-                        <li>Deployed to Vercel for development environments using GitHub Actions.</li>
-                        <li>Proficient in Git/GitHub branch management and Agile collaboration methodologies.</li>
-                        <li>Experience in diagnosing and resolving Linus system issues by utilizing filesystems and hardware diagnostics, as well as addressing boot-related problems and system recovery.</li>
-                        <li>Basic familiarity with Docker, Kubernetes, Linkerd, and Jenkins.</li>
+                        <li>Developed brand strategy and ensured alignment with the client's overall vision and values. Conducted market research, competitor analysis, and customer insights to identify opportunities for brand growth.</li>
+                        <li>Worked to create and maintain a consistent and compelling brand identity. Shaped and oversaw development of brand guidelines, logos, color schemes, and other visual elements to reflect clients' desired brand personality.</li>
+                        <li>Collaborated with creatives, designers, social media managers, photographers, local radio/news, and etc. as necessary with campaigns.</li>
+                        <li>As the principal owner, I was required to manage all aspects of the business. This includes the business planning, setting goals, financial management, tax compliance, and bookkeeping.</li>
                       </p>
                     </div>
                     <div class="year">
