--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -104,17 +104,13 @@
                     <div class="p-5">
                       <h2 class="mb-5">Hi! I'm Gil Hope</h2>
                       <p>I'm a DevOps / Cloud Developer with a focus on AWS. </p>
-                      <p><!--<a href="#experience">Checkout my resume</a>--></p>
                       <ul class="ftco-footer-social list-unstyled mt-4">
                         <li><a target="_blank" href="https://www.linkedin.com/in/gil-hope/"><span class="icon-linkedin"></span></a></li>
                         <li><a target="_blank" href="https://github.com/GilHope"><span class="icon-github"></span></a></li>
-                        
-                        <!-- <li><a target="_blank" href="https://twitter.com/shekar_ym"><span class="icon-twitter"></span></a></li>-->
-                        <!-- <li><a href="#"><span class="icon-instagram"></span></a></li> -->
                       </ul>
                       <h5>Contact me here!</h5>
                       <p>Email: <a style="z-index: 1;position:relative;" href="mailto:gildhope@gmail.com">gildhope@gmail.com</a></p>
-                      <!-- <p>Phone: <a style="z-index: 1;position:relative;"  href="tel:+19124142161">+1 912 414 2161</a></p> -->
+                      <!-- <p>Phone: <a style="z-index: 1;position:relative;"  href="tel:+1XXXXXXX">+1 XXX XXX XXXX</a></p> -->
                       <h5><a style="z-index: 1;position:relative;" href="https://dev.to/gilhope/conquering-the-cloud-my-adventure-with-the-cloud-resume-challenge-5ak6" target="_blank">Check out my blog!</a></h5>
                       <h5><a href="Your_Resume.pdf" download="Your_Name_Resume.pdf">Download my resume!</a><h5></h5>
 
