add pdf download

--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -112,7 +112,7 @@
                       <p>Email: <a style="z-index: 1;position:relative;" href="mailto:gildhope@gmail.com">gildhope@gmail.com</a></p>
                       <!-- <p>Phone: <a style="z-index: 1;position:relative;"  href="tel:+1XXXXXXX">+1 XXX XXX XXXX</a></p> -->
                       <h5><a style="z-index: 1;position:relative;" href="https://dev.to/gilhope/conquering-the-cloud-my-adventure-with-the-cloud-resume-challenge-5ak6" target="_blank">Check out my blog!</a></h5>
-                      <h5><a href="Your_Resume.pdf" download="Your_Name_Resume.pdf">Download my resume!</a><h5></h5>
+                      <h5><a href="resume3.0/Gil Hope - Resume.pdf" download="Gil Hope - Resume.pdf">Download my resume!</a></h5>
 
                       <a href="https://www.credly.com/badges/e9ba9344-0339-4895-9df8-19dadc4057ce" target="_blank">
                         <img src="images/aws_ccp.png" style="z-index: 1; position: relative; width:25%">
