--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -157,6 +157,32 @@
                               <li>Setup CI/CD using GitHub actions for backend and front end.</li>
                             </p>
                           </div>
+                          <div class="text">
+                            <h2 class="heading"><a href="">VPC Stack</a></h2>
+                            <h5>Terraform, ElastiCache, Amazon MQ, Elastic Beanstalk, CloudFront, and VPC, public/private subnets, security groups, ELB, and Internet Gateway</h5>
+                            <p>
+                              <li>Deployed a Dockerized version of the popular 2048 game on AWS Elastic Beanstalk.</li>
+                              <li>Utilized Terraform for infrastructure provisioning, defining AWS Elastic Beanstalk application, environment, and IAM roles.</li>
+                              <li>Created a Docker container with a Dockerfile, based on Ubuntu 22.04, and configured Nginx to serve the game.</li>
+                              <li>Automated deployment workflows using GitHub Actions for continuous integration and continuous deployment (CI/CD).</li>
+                              <li>Secured AWS credentials using AWS IAM and securely stored access keys.</li>
+                              <li>Managed AWS Elastic Beanstalk environment with specific settings and tags.</li>
+                              <li>Collaborated on GitHub for version control, hosting, and code management.</li>
+                            </p>
+                          </div>
+                          <div class="text">
+                            <h2 class="heading"><a href="">2048 Game</a></h2>
+                            <h5>Terraform, Elastic Beanstalk, Docker, AWS IAM, Nginx</h5>
+                            <p>
+                              <li>VPC with public and private subnets.</li>
+                              <li>Internet Gateway for internet access.</li>
+                              <li>Public subnet with Elastic Beanstalk and an ELB for web applications.</li>
+                              <li>Private subnet with EC2 instances, MySQL databases, ElastiCache, and a bastion host.</li>
+                              <li>RDS instance for managed relational databases.</li>
+                              <li>Amazon MQ for managed message broker service.</li>
+                              <li>Terraform state stored in an S3 bucket.</li>
+                            </p>
+                          </div>
                         </div>
                       </div>
                     </div>
