--- a/resume3.0/index.html
+++ b/resume3.0/index.html
@@ -148,7 +148,7 @@
                         <div class="exp-wrap py-4">
                           <div class="text">
                             <h2 class="heading"><a href="">Cloud Resume Challenge</a></h2>
-                            <h5>Amazon S3, Amazon CloudFront, Amazon Route 53, AWS Lambda, AWS SAM, AWS DynamoDB</h5>
+                            <h5>Amazon S3, Amazon CloudFront, Amazon Route 53, AWS Lambda, AWS DynamoDB, AWS SAM / CloudFormation</h5>
                             <p>
                               <li>Deploy an HTML resume as AWS S3 static website. Configure AWS CloudFront and OAI to make the S3 website URL to use HTTPS.</li>
                               <li>Configure AWS Route 53 for a custom domain name and point to the CloudFront distribution.</li>
